--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://noahkiser.com" # the base hostname & protocol for your site, e.g. http://example.com
 
+host: "0.0.0.0"
+port: "4000"
 
 # Build settings
 theme: minima
